# keep-cli

./: .gitignore  Makefile  README.md  application.py  config.example.yml  constants.py  kc.py  keep  keep-curses.py  pyproject.toml  query.py  requirements.txt  shim.py  util.py
keep_cli/: application.py  commands.py  constants.py  query.py  util.py
keep_cli/widget/: edit.py  grid.py  help.py  labels.py  note.py  search.py  views.py
src/keep_cli/: __main__.py  query.py  util.py
src/keep_cli/widget/: help.py  kanban.py  note.py  status.py  views.py
widget/: edit.py  grid.py  help.py  kanban.py  labels.py  note.py  search.py  status.py  util.py  views.py
